GetAllPatients use case